rocket/measurements/verilator-small-v1.4-O3/sim-perf.txt
START: Current timestamp in milliseconds: 1731323116369
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket.sv
/home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket.fir:2:1: error: expected 'FIRRTL'
circuit RocketSystem : 
^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket.sv':

             19.68 msec task-clock:u                     #    0.983 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,224      page-faults:u                    #  112.999 K/sec                     
         8,041,435      cycles:u                         #    0.409 GHz                         (11.33%)
         4,900,255      stalled-cycles-frontend:u        #   60.94% frontend cycles idle        (26.52%)
       125,035,224      instructions:u                   #   15.55  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (41.76%)
        26,618,495      branches:u                       #    1.352 G/sec                       (57.05%)
           416,775      branch-misses:u                  #    1.57% of all branches             (72.24%)
        57,497,376      L1-dcache-loads:u                #    2.921 G/sec                       (76.21%)
         5,075,851      L1-dcache-load-misses:u          #    8.83% of all L1-dcache accesses   (73.48%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,057,492      L1-icache-loads:u                #   53.730 M/sec                       (58.24%)
            11,405      L1-icache-load-misses:u          #    1.08% of all L1-icache accesses   (42.95%)
            72,440      dTLB-loads:u                     #    3.681 M/sec                       (27.76%)
            21,252      dTLB-load-misses:u               #   29.34% of all dTLB cache accesses  (12.46%)
     <not counted>      iTLB-loads:u                                                            (0.00%)
     <not counted>      iTLB-load-misses:u                                                      (0.00%)
     <not counted>      L1-dcache-prefetches:u                                                  (0.00%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.020027799 seconds time elapsed

       0.016662000 seconds user
       0.003289000 seconds sys


Some events weren't counted. Try disabling the NMI watchdog:
	echo 0 > /proc/sys/kernel/nmi_watchdog
	perf stat ...
	echo 1 > /proc/sys/kernel/nmi_watchdog
GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-small-v1.4-O3-simperf/rocket.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket-vtor /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-small-v1.4-O3-simperf//rocket.sv /home/bea/Research/paper-evals/arc-tests/rocket/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             60.90 msec task-clock:u                     #    1.422 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,234      page-faults:u                    #   69.520 K/sec                     
       155,016,934      cycles:u                         #    2.545 GHz                         (55.70%)
        23,915,826      stalled-cycles-frontend:u        #   15.43% frontend cycles idle        (55.70%)
       118,854,595      instructions:u                   #    0.77  insn per cycle            
                                                  #    0.20  stalled cycles per insn     (51.00%)
        71,619,589      branches:u                       #    1.176 G/sec                       (17.47%)
         1,820,406      branch-misses:u                  #    2.54% of all branches             (37.12%)
       108,061,439      L1-dcache-loads:u                #    1.774 G/sec                       (41.95%)
         2,398,318      L1-dcache-load-misses:u          #    2.22% of all L1-dcache accesses   (41.97%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        28,803,777      L1-icache-loads:u                #  472.943 M/sec                       (41.98%)
           443,044      L1-icache-load-misses:u          #    1.54% of all L1-icache accesses   (41.99%)
           610,483      dTLB-loads:u                     #   10.024 M/sec                       (42.01%)
            19,711      dTLB-load-misses:u               #    3.23% of all dTLB cache accesses  (41.98%)
           777,451      iTLB-loads:u                     #   12.765 M/sec                       (47.98%)
            24,149      iTLB-load-misses:u               #    3.11% of all iTLB cache accesses  (63.30%)
           901,732      L1-dcache-prefetches:u           #   14.806 M/sec                       (58.39%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.042825920 seconds time elapsed

       0.054080000 seconds user
       0.006542000 seconds sys


GROUP: verilator SUBGROUP: clang
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
